# plantclef-vision

./: .gitignore  .pre-commit-config.yaml  README.md  data  model  packages.txt  pyproject.toml  requirements.txt  setup.py
notebooks/: embedding.ipynb  faiss.ipynb  litdata.ipynb  prepare_data.ipynb  profiling.ipynb  setup_itac.ipynb  train_species_selection.ipynb
plantclef/: __init__.py  config.py  plotting.py
plantclef/datasets/: __init__.py  download_plantclef2025.py  image.py  optimize_plantclef.py  parquet_dataset.py  transforms.py  upload_to_s3.py  utils.py
plantclef/datasets/preprocessing/: __init__.py  test_to_hf.py  test_to_parquet.py
plantclef/datasets/preprocessing/hf/: __init__.py  parallel_utils.py  test_to_hf.py  train_val_test_subsets_to_hf.py
plantclef/embed/: __init__.py  prepare_submission.py  utils.py  workflow.py
plantclef/faiss/: classifier.py
plantclef/faiss_tools/: classifier.py
plantclef/pytorch/: __init__.py  data.py  data_catalog.py  model.py
plantclef/torch/: __init__.py
plantclef/utils/: __init__.py  df_utils.py  file_utils.py  imutils.py  spark_utils.py
scripts/: activate.sh  check-parquet.sh  clean_old_data.sh  download_and_extract.sh  download_data_model.sh  download_full_train_data_stream.py  run_setup_plantclef2025_data.sh  scratch.sh  setup_machine.sh
tests/: test_imports.py  test_model.py  test_pl_trainer.py
tests/huggingface/: benchmark_dataloader.py  test_dataloader.py
tests/litdata/: test_generate.py  test_stream.py
