[project]
name = "plantclef"
version = "0.1.1"
authors = [{ name = "Jacob A Rose", email = "Jacob@JacobARose.com" }]
description = "PyTorch PlantCLEF vision helper package"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
dependencies = [
    "jupyter",
    "jupyter-contrib-nbextensions",
    "notebook==6.4.12",
    "traitlets==5.9.0",
]

[project.urls]
Homepage = "https://github.com/JacobARose/plantclef-vision"
Issues = "https://github.com/JacobARose/plantclef-vision/issues"

[project.scripts]
plantclef = "plantclef.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["plantclef*"]
namespaces = false
